# Qt-creator

./: .gitignore  AdministrationPage.qml  AnimatedDashboardCard.qml  CMakeLists.txt  DatabaseSchema.h  DatabaseViewModel.cpp  DatabaseViewModel.h  DbNotifier.h  Footer.qml  LoaderOverlay.qml  LoginPage.qml  LoginViewModel.cpp  LoginViewModel.h  Main.qml  Navbar.qml  PickupPage.qml  ReelsInPage.qml  ReportPage.qml  SettingsPage.qml  StoreoutPage.qml  StoresInPage.qml  Toast.qml  VirtualRackPage.qml  WarningsPage.qml  databasemanager.cpp  databasemanager.h  main.cpp  rack.cpp  rack.h  resource.qrc
.qtcreator/: CMakeLists.txt.user.bb29d93
